# apriltags

./: .gitignore  CMakeLists.txt  README.md  export.cmake
CMakeModules/: FindOpenCV2.cmake__
example/: .findtargets.cpp.swp  CMakeLists.txt  ceres_cost_functions.h  cmod.xml  findtargets.cpp  gettruth.cpp  tags.h
example2/: CMakeLists.txt  main.cpp
include/apriltags/: apriltag.h  g2d.h  graymodel.h  image_f32.h  image_u32.h  image_u8.h  line_fit.h  tag36h11.h  timeprofile.h  workerpool.h  zhash.h
src/: '  .CMakeLists.txt.swp  CMakeLists.txt  apriltag.c  g2d.c  graymodel.c  homography.c  image_f32.c  image_u32.c  image_u8.c  matd.c  segment2.c  tag36h10.c  tag36h11.c  tagtest.c  workerpool.c  zarray.c  zhash.c
